Fixed axios function to send and recieve data.

--- a/frontend/Structure.html
+++ b/frontend/Structure.html
@@ -8,12 +8,14 @@
 <h1>AI-Assisted Code Review</h1>
 <div id="input">
    <p>Enter your code</p>
-   <input type="text" placeholder="Write your code here">
+   <input type="text" id="code" placeholder="Write your code here">
    <br><br>
-   <button id="sender">Send</button>
+   <button onclick="sendData" id="sender">Send</button>
  </div>
  <div id="output">
   <h2>Response</h2>
  </div>
+ <script defer src = "axios.min.js"></script>
+ <script defer src = "script.js"></script>
 </body>
 </html>
