Add ID to input field for code entry

--- a/frontend/Structure.html
+++ b/frontend/Structure.html
@@ -7,13 +7,16 @@
 <body>
 <h1>AI-Assisted Code Review</h1>
 <div id="input">
-   <p>Enter your code</p>
-   <input type="text" placeholder="Write your code here">
-   <br><br>
+  <p>Enter your code</p>
+  <input type="text" id="code" placeholder="Write your code here">
+  <br><br>
    <button id="sender">Send</button>
  </div>
  <div id="output">
   <h2>Response</h2>
  </div>
 </body>
+<link rel="script" href="script.js">
+<script defer src = "axios.min.js"></script>
 </html>
+
