Fixed the file directory.

--- a/frontend/Structure.html
+++ b/frontend/Structure.html
@@ -3,7 +3,7 @@
 <head>
   <title>AI Code Review</title>
 </head>
-<link rel="Style.css" href="Style.css">
+<link rel="stylesheet" href="/scripts/Style.css">
 <body>
 <h1>AI-Assisted Code Review</h1>
 <div id="input">
@@ -16,7 +16,7 @@
   <h2>Response</h2>
  </div>
 </body>
-<link rel="script" href="script.js">
-<script defer src = "axios.min.js"></script>
+<link rel="script" href="/scripts/script.js">
+<script defer src = "/scripts/axios.min.js"></script>
 </html>
 
