--- a/frontend/Structure.html
+++ b/frontend/Structure.html
@@ -3,19 +3,20 @@
 <head>
   <title>AI Code Review</title>
 </head>
-<link rel="Style.css" href="Style.css">
+<link rel="stylesheet" href="/scripts/Style.css">
 <body>
 <h1>AI-Assisted Code Review</h1>
 <div id="input">
-   <p>Enter your code</p>
-   <input type="text" id="code" placeholder="Write your code here">
-   <br><br>
-   <button onclick="sendData" id="sender">Send</button>
+  <p>Enter your code</p>
+  <input type="text" id="code" placeholder="Write your code here">
+  <br><br>
+   <button id="sender">Send</button>
  </div>
  <div id="output">
   <h2>Response</h2>
  </div>
- <script defer src = "axios.min.js"></script>
- <script defer src = "script.js"></script>
 </body>
+<link rel="script" href="/scripts/script.js">
+<script defer src = "/scripts/axios.min.js"></script>
 </html>
+
