Fixed API to send data to the javascript file.

--- a/frontend/Structure.html
+++ b/frontend/Structure.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>AI Code Review</title>
-</head>
-<link rel="stylesheet" href="/scripts/Style.css">
-<body>
-<h1>AI-Assisted Code Review</h1>
-<div id="input">
-  <p>Enter your code</p>
-  <input type="text" id="code" placeholder="Write your code here">
-  <br><br>
-   <button id="sender">Send</button>
- </div>
- <div id="output">
-  <h2>Response</h2>
- </div>
-</body>
-<link rel="script" href="/scripts/script.js">
-<script defer src = "/scripts/axios.min.js"></script>
+  <head>
+    <title>AI Code Review</title>
+  </head>
+  <link rel="stylesheet" href="styles/style.css" />
+  <body>
+    <h1>AI-Assisted Code Review</h1>
+    <div id="input">
+      <p>Enter your code</p>
+      <input type="text" id="code" placeholder="Write your code here" />
+      <br /><br />
+      <button id="sender">Send</button>
+    </div>
+    <div id="output">
+      <h2>Response</h2>
+    </div>
+    <script defer src="scripts/axios.min.js"></script>
+    <script defer src="scripts/script.js"></script>
+  </body>
 </html>
-
