Add file upload input and fix closing tag
Fixed a typo in the closing tag and added a new input field for file upload.

--- a/frontend/Structure.html
+++ b/frontend/Structure.html
@@ -9,9 +9,10 @@
     <div id="input">
       <p>Enter your code</p>
       <input type="text" id="code" placeholder="Write your code here" />
+      <input type="text" id="file_name" placeholder="upload your file" />
       <br /><br />
       <button id="sender">Send</button>
-    </div>
+    </divr 
     <div id="output">
       <h2>Response</h2>
     </div>
