Fix HTML structure and update placeholders

--- a/frontend/Structure.html
+++ b/frontend/Structure.html
@@ -2,21 +2,23 @@
 <html>
   <head>
     <title>AI Code Review</title>
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
-  <link rel="stylesheet" href="styles/style.css" />
   <body>
     <h1>AI-Assisted Code Review</h1>
-    <div id="input">
+
+<div id="input">
       <p>Enter your code</p>
       <input type="text" id="code" placeholder="Write your code here" />
-      <input type="text" id="file_name" placeholder="upload your file" />
+      <input type="text" id="file_name" placeholder="Upload your file" />
       <br /><br />
       <button id="sender">Send</button>
-    </divr 
-    <div id="output">
+</div>
+
+<div id="output">
       <h2>Response</h2>
-    </div>
-    <script defer src="scripts/axios.min.js"></script>
-    <script defer src="scripts/script.js"></script>
+</div>
+<script defer src="scripts/axios.min.js"></script>
+<script defer src="scripts/script.js"></script>
   </body>
 </html>
