--- a/frontend/Structure.html
+++ b/frontend/Structure.html
@@ -14,9 +14,11 @@
       <br /><br />
       <button id="sender">Send</button>
 </div>
-
+<div>
+  <p>Your input</p>
+</div>
 <div id="output">
-      <h2>Response</h2>
+  <h2>Response</h2>
 </div>
 <script defer src="scripts/axios.min.js"></script>
 <script defer src="scripts/script.js"></script>
