adding checkbox and plus adding css and html.

--- a/frontend/Structure.html
+++ b/frontend/Structure.html
@@ -14,9 +14,9 @@
       <br /><br />
       <button id="sender">Send</button>
 </div>
-<div>
-  <p>Your input</p>
-</div>
+<label for="myCheck">Checkbox:</label> 
+<input type="checkbox" id="myCheck" onclick="myFunction()">
+<p id="text">Submit</p>
 <div id="output">
   <h2>Response</h2>
 </div>
