Clear text in paragraph with id 'text'
Remove the text from the paragraph element with id 'text'.

--- a/frontend/Structure.html
+++ b/frontend/Structure.html
@@ -16,7 +16,7 @@
 </div>
 <label for="myCheck">Checkbox:</label> 
 <input type="checkbox" id="myCheck" onclick="myFunction()">
-<p id="text">Submit</p>
+<p id="text"></p>
 <div id="output">
   <h2>Response</h2>
 </div>
